--- a/instituicao/componentes/header/styles_header.css
+++ b/instituicao/componentes/header/styles_header.css
@@ -7,31 +7,23 @@
  body{
     width: 100vw;
     height: 100vh;
-    padding: 20px 40px;
     font-family: 'Roboto';
 }
 
 header{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    padding: 30px 70px;
+    color: hsl(208, 93%, 24%);
 }
 
-.primeira_parte{
+header .primeira_parte{
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 5vh;
 }
 
-.primeira_parte h1{
-    margin-left: 5vh;
-}
-
-img{
-    width: 70px;
-}
-
-h1{
-    color: hsl(208, 93%, 24%);
-    font-size: 30px;
+header h1{
+    font-size: 24px;
 }
