--- a/instituicao/usuarios/visualizacao/style.css
+++ b/instituicao/usuarios/visualizacao/style.css
@@ -30,6 +30,22 @@
     width: 100vw;
 }
 
+.addCurso {
+    background-color: #044177;
+    border: none;
+    color: white;
+    padding: 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.button5 {
+    border-radius: 50%;
+    margin-right: 3%;
+    margin-bottom: -35%;
+}
+
 #ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
@@ -82,7 +98,7 @@
     bottom: 0;
     left: 0;
     width: 30vw;
-    height:30vh;
+    height: 30vh;
     background-color: rgb(255, 255, 255);
     display: none;
     align-items: center;
@@ -377,7 +393,7 @@ h1 {
     color: #05204A;
 }
 
-.lab-inp input{
+.lab-inp input {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
@@ -448,7 +464,6 @@ h1 {
         justify-content: space-between;
         align-items: center;
     }
-
     .tipo_usuario ul li {
         list-style: none;
         width: 30%;
@@ -463,7 +478,6 @@ h1 {
         text-decoration: none;
         font-size: 12px;
     }
-
     #ul {
         width: 100%;
         height: 10%;
@@ -473,7 +487,6 @@ h1 {
         padding: 5%;
         overflow-y: auto;
     }
-    
     #turma_selecionada {
         display: flex;
         flex-direction: column;
