--- a/instituicao/turmas/vizualizacao/style.css
+++ b/instituicao/turmas/vizualizacao/style.css
@@ -181,6 +181,16 @@ img {
     overflow-y: auto;
 }
 
+#ul-turma {
+    width: 100%;
+    border: 2px solid;
+    border-color: #05204A;
+    border-radius: 10px;
+    padding: 2%;
+    overflow-y: auto;
+}
+
+
 #ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
@@ -215,19 +225,6 @@ img {
     margin: 3%;
 }
 
-#novo_curso {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 20vw;
-    height: 40vh;
-    background-color: #F4F4F4;
-    border-radius: 20px;
-    overflow-y: auto;
-    color: #044177;
-    padding: 2%;
-    margin-right: 6%;
-}
 
 #novo_curso h1 {
     font-weight: 700;
@@ -239,7 +236,7 @@ img {
 
 #icon i {
     position: absolute;
-    right: 7%;
+    right: 6%;
     top: 65%;
     padding: 9px 8px;
     color: #808080;
@@ -272,7 +269,7 @@ img {
     font-weight: 400;
 }
 
-#primeiro_botao {
+.primeiro_botao {
     margin-top: 2vh;
     width: 98%;
     color: white;
@@ -283,7 +280,7 @@ img {
     padding: 15px;
 }
 
-#segundo_botao {
+.segundo_botao {
     margin-top: 2vh;
     width: 98%;
     color: white;
@@ -295,7 +292,7 @@ img {
     margin-right: 5%;
 }
 
-#terceiro_botao {
+.terceiro_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -307,7 +304,7 @@ img {
     padding: 15px;
 }
 
-#quarto_botao {
+.quarto_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -322,31 +319,6 @@ img {
 .buttons {
     display: flex;
     flex-direction: row-reverse;
-}
-
-.buttons-buttons {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100%;
-}
-
-.modal-curso {
-    width: 40%;
-    height: 30vh;
-    display: none;
-    background-color: rgb(255, 255, 255);
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 20px;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    font-weight: 100;
 }
 
 .modal-editar {
@@ -412,14 +384,6 @@ img {
     width: 100%;
 }
 
-.buttons {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    text-align: center;
-    justify-content: center;
-}
-
 .formExcluir {
     align-items: center;
     flex-direction: column;
@@ -437,37 +401,7 @@ img {
     font-size: 50px;
 }
 
-#nome_do_curso input {
-    width: 100%;
-}
-
-.modal-selecao h2 {
-    color: #05204A;
-    font-weight: 500;
-}
-
-.modal-curso .buttons button {
-    background-color: red;
-}
-
-.icon input {
-    padding-right: 50px;
-}
-
-.icon {
-    position: relative;
-}
-
-.icon i {
-    position: absolute;
-    right: 3%;
-    top: 25%;
-    padding: 9px 8px;
-    color: #808080;
-    transition: 0.3s;
-}
-
-.addCurso {
+.addTurma {
     background-color: #044177;
     border: none;
     color: white;
@@ -504,6 +438,7 @@ img {
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
+
 
 @media (max-width: 830px) {
     #book {
