--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -19,15 +19,6 @@ body {
     width: 100vw;
 }
 
-.ul-turma {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2%;
-    height: 100vh;
-    width: 100vw;
-}
-
 #ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
@@ -167,8 +158,9 @@ img {
 }
 
 #ul-turma {
+    margin: 1% 0;
     width: 100%;
-    height: 20vh;
+    height: 100%;
     border: 2px solid;
     border-color: #05204A;
     border-radius: 10px;
@@ -328,6 +320,8 @@ img {
     color: #C2C2C2;
 }
 
+
+
 .turma-select {
     background-color: #E3E3E3;
     border-radius: 10px;
@@ -340,6 +334,13 @@ img {
     display: flex;
     flex-direction: row-reverse;
 }
+
+.buttons-modal{
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 
 @media (max-width: 830px) {
     .container {
