--- a/instituicao/usuarios/visualizacao/style.css
+++ b/instituicao/usuarios/visualizacao/style.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 2%;
-    width: 100%;
+    width: 100vh;
 }
 
 .container-geral {
@@ -30,7 +30,7 @@
     width: 100vw;
 }
 
-.addCurso {
+.addUsuario {
     background-color: #044177;
     border: none;
     color: white;
@@ -38,6 +38,11 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
+}
+
+.buttonAddUsuario{
+    margin-top: 80vh;
+    margin-right: 2%;
 }
 
 .button5 {
@@ -65,15 +70,6 @@
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
-}
-
-.usuarios_existentes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    font-size: 50px;
-    font-weight: 700;
 }
 
 .usuarios_existentes input {
@@ -387,12 +383,6 @@ h1 {
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
-
-.modal h1 {
-    font-weight: 700;
-    color: #05204A;
-}
-
 .lab-inp input {
     background-color: #E3E3E3;
     border-radius: 10px;
@@ -417,7 +407,7 @@ h1 {
 .buttons {
     display: flex;
     flex-direction: row-reverse;
-    width: 90%;
+    width: 100%;
 }
 
 .terceiro_botao {
