--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -474,7 +474,9 @@ img {
     border: none;
     color: white;
     padding: 25px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     display: inline-block;
 }
@@ -483,6 +485,8 @@ img {
     border-radius: 50%;
     margin-right: 3%;
     margin-bottom: -35%;
+    height: 85px;
+    width: 85px;
 }
 
 @media (max-width: 830px) {
