--- a/instituicao/turmas/style.css
+++ b/instituicao/turmas/style.css
@@ -76,11 +76,12 @@ body {
 }
 
 .container-selecionando{
-    background-color: #E3E3E3;
+    height: 50%;
+    margin: 0 1% 0 0;
 }
 
 .container-selecionado{
-    background-color: #E3E3E3;
+    height: 50%;
 }
 
 
@@ -241,6 +242,33 @@ img {
     overflow-y: auto;
 }
 
+#ul-membro {
+    margin: 1% 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid;
+    border-color: #05204A;
+    border-radius: 10px;
+    padding: 2%;
+    overflow-y: auto;
+    background-color: #E3E3E3;
+}
+
+.container-selecionando h1{
+    font-size: 40px;
+}
+
+.container-selecionado h1{
+    font-size: 40px;
+}
+
+.container-cadastro-membro{
+    display: flex;
+    flex-direction: row;
+    font-size: 23px;
+    text-align: center;
+}
+
 #ul-aluno {
     margin: 1% 0;
     width: 100%;
@@ -278,6 +306,16 @@ img {
 }
 
 #li {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5%;
+}
+
+#li-membro {
+    background-color: #E3E3E3;
     border: none;
     display: flex;
     flex-direction: row;
@@ -355,6 +393,26 @@ img {
     margin-bottom: 1%;
 }
 
+.lab-inp-modal {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 100%;
+
+}
+
+.lab-inp-modal input {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px;
+    width: 100%;
+}
+
+.lab-inp-modal label {
+    font-weight: 400;
+}
+
+
 .curso {
     font-size: 20px;
 }
@@ -418,6 +476,7 @@ img {
 .buttons {
     display: flex;
     flex-direction: row-reverse;
+    width: 100%;
 }
 
 .modal-excluir {
@@ -481,25 +540,15 @@ img {
     font-size: 50px;
 }
 
-.buttonAddTurma{
-    margin-top: 80vh;
-    margin-right: 2%;
-}
-
-.addTurma {
-    background-color: #044177;
-    border: none;
+.button5 { 
     color: white;
-    padding: 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.button5 {
+    border: none;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     margin-right: 3%;
     margin-bottom: -35%;
+    background-color: #044177;
 }
 
 .buttons-modal{
@@ -509,31 +558,68 @@ img {
 }
 
 
-@media (max-width: 830px) {
+@media (max-width: 700px) {
+    .container-geral{
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+    }
+
     #book {
         display: none;
     }
     .container {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5%;
+        height: 80vh;
+        width: 90%;
         padding: 2%;
     }
-    .container h1 {
-        display: flex;
-        font-size: clamp(0rem, 10vw, 4.3rem);
+
+    body{
+        height: 100vh;
+        align-items: center;
         text-align: center;
     }
-    .card_azul h1 {
-        font-size: clamp(0rem, 10vw, 2.3rem);
+
+    #ul{
+        margin-top: 1%;
+        height: 100%;
     }
+
+
     #li {
         display: flex;
         flex-direction: column;
     }
-    .button h2 {
-        font-size: clamp(0rem, 10vw, 1.5rem);
-    }
+
     .turma {
         font-size: clamp(0rem, 10vw, 1.5rem);
         margin-right: 5%;
+    }
+
+    .nome {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+    }
+
+    #icon label {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+        margin-right: 5%;
+    }
+
+    .modal h1{
+        font-size: clamp(0rem, 10vw, 1.5rem);
+    }
+
+    .modal{
+        text-align: justify;
+    }
+
+    #turma {
+        display: flex;
+        flex-direction: row;
     }
     #icone {
         display: flex;
@@ -548,7 +634,7 @@ img {
     #icon i {
         position: absolute;
         right: 7%;
-        top: 65%;
+        top: 50%;
         padding: 9px 8px;
         color: #808080;
         transition: 0.3s;
@@ -558,4 +644,85 @@ img {
         padding: 9px 4px;
         border-radius: 4px 0 0 4px;
     }
+
+    .button5 {
+        width: 90%;
+        background-color: rgba(240, 248, 255, 0);
+        color: white;
+        background-color: #044177;
+        border-radius: 20px;
+        font-weight: 700;
+        border: none;
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
+    button{
+        font-size: clamp(0rem, 10vw, 0.8rem);
+    }
+
+    .modal .buttons{
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+
+    .membro-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #ul-professor {
+        margin: 1% 0;
+        width: 100%;
+        height: 70%;
+        border: 2px solid;
+        border-color: #05204A;
+        border-radius: 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+
+#ul-professor #li{
+    display: flex;
+    flex-direction: row;
+}
+
+#ul-aluno #li{
+    display: flex;
+    flex-direction: row;
+}
+
+#ul-avaliador #li{
+    display: flex;
+    flex-direction: row;
+}
+
+.iconify{
+    height: 50px;
+}
+
+    #ul-aluno {
+        margin: 1% 0;
+        width: 100%;
+        height: 70%;
+        border: 2px solid;
+        border-color: #05204A;
+        border-radius: 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+
+    #ul-avaliador{
+        margin: 1% 0;
+        width: 100%;
+        height: 70%;
+        border: 2px solid;
+        border-color: #05204A;
+        border-radius: 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+
+
 }
